<resources>
    <string name="app_name">Laborator1</string>
    <string name="VideoGames4Days" />
    <string name="additional_info">Additional info</string>
    <string name="welcome_to_my_store">Welcome to my store!</string>
    <string name="main_image">Main image</string>
    <string name="logo_image">Logo Image</string>
    <string name="game_image">Game Image</string>
    <string name="ceva">ceva</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="insert_a_new_item_my_friend">Insert a new item, my friend.</string>
    <string name="settings">Settings</string>
    <string name="save_to_file">Save to file</string>
    <string name="load_from_file">Load from file</string>
    <string name="title_activity_sensors">SensorsActivity</string>
    <string name="sensors">Sensors</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="take_picture">Take picture</string>
</resources>
